# BoxCore

./: pyproject.toml  readme.md
box_core/dataset/: __init__.py  abstract.py  dataset.py  experiment_data.py  roles.py
box_core/executor/: executor.py
box_core/experiments/: __init__.py  base.py
box_core/pipelines/: __init__.py  base.py
box_core/utils/: __init__.py  enums.py
boxcore/dataset/: __init__.py  abstract.py  dataset.py  roles.py
boxcore/executor/: executor.py
boxcore/pipelines/: base.py
