[tool.poetry]
name = "BoxCore"
version = "0.0.1"
description = "Flexible architecture for building block-based boxed solutions based on pipelines and the ability to work with independent modules."
authors = [
    "Dmitry Bulychev <dmatryus.sqrt49@yandex.ru>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Dmatryus/BoxCore"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = ">=3.8, <3.11"
tqdm = '*'
scikit-learn = "*"

pandas = [
    { version = ">=1.3.5, <=2.0.3", python = "<3.9" },
    { version = ">=1.3.5, <=2.1.4", python = ">=3.9" }
]

numpy = [
    { version = ">=1.17.0, <=1.24.4", python = "<3.9" },
    { version = ">=1.17.0, <=1.26.3", python = ">=3.9" }
]

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.4"

sphinx = { version = "^7.2.6", python = ">=3.9, <3.11" }
nbsphinx = "*"
nbsphinx_link = "*"
sphinx_autodoc_typehints = "*"
sphinx_rtd_theme = "^1.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
